[gd_scene load_steps=4 format=2]

[ext_resource path="res://BehaviourZones/ExplodeZone.gd" type="Script" id=1]
[ext_resource path="res://BehaviourZones/Sprites/explosion.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 2, 2.5 )

[node name="ExplodeZone" type="Area2D"]
collision_mask = 4
script = ExtResource( 1 )

[node name="ExplosionTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 5.0
one_shot = true

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.5, 1.5 )
shape = SubResource( 1 )

[connection signal="body_entered" from="." to="." method="_on_ExplodeZone_body_entered"]
[connection signal="timeout" from="ExplosionTimer" to="." method="_on_ExplosionTimer_timeout"]
